--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ Thumbs.db
 .DS_Store?
 __pycache__/
 
+keypoint_annotation/production/__pycache__/worm_datasets.cpython-37.pyc
+keypoint_annotation/dataloaders/__pycache__/training_dataloaders.cpython-37.pyc
